Added pacing, log and think time

--- a/default.cfg
+++ b/default.cfg
@@ -1,27 +1,75 @@
 [General]
-XlBridgeTimeout=120
-DefaultRunLogic=default.usp
 automatic_nested_transactions=1
 AutomaticTransactions=1
-[ThinkTime]
-Options=NOTHINK
-Factor=1
-LimitFlag=0
-Limit=1
+DefaultRunLogic=default.usp
+Encoding=ANSI
+XlBridgeTimeout=120
 [Iterations]
-NumOfIterations=1
 IterationPace=IterationASAP
-StartEvery=60
-RandomMin=60
+NumOfIterations=1
 RandomMax=90
+RandomMin=60
+StartEvery=60
 [Log]
+AutoLog=0
+AutoLogBufferSize=1
+IncludeEnvInfo=1
+LogDetail=0
 LogOptions=LogBrief
 MsgClassData=0
-MsgClassParameters=0
 MsgClassFull=0
+MsgClassParameters=0
+PrintTimeStamp=0
+[ThinkTime]
+Factor=1
+Limit=5
+LimitFlag=1
+Options=RANDOM
+ThinkTimeRandomHigh=150
+ThinkTimeRandomLow=50
 [WEB]
-SearchForImages=1
-WebRecorderVersion=8
-MaxConnections=0
-LogFileWriteTraceToFile=0
+AnalogMode=0
+BrowserAcceptEncoding=gzip, deflate
+BrowserAcceptLanguage=en
+BrowserType=Microsoft Internet Explorer 4.0
+CustomUserAgent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36
+EnableChecks=0
+HttpVer=1.1
+KeepAlive=1
 LogFileWrite=0
+LogFileWriteTraceToFile=0
+MaxConnections=0
+NavigatorBrowserLanguage=en-US
+NavigatorSystemLanguage=tr-TR
+NavigatorUserLanguage=en-US
+ProxyAutoConfigScriptURL=
+ProxyBypass=
+ProxyHTTPHost=
+ProxyHTTPPort=443
+ProxyHTTPSHost=
+ProxyHTTPSPort=443
+ProxyNoLocal=0
+ProxyPassword=
+ProxyUseAutoConfigScript=0
+ProxyUseBrowser=0
+ProxyUseProxy=0
+ProxyUseProxyServer=0
+ProxyUserName=
+ProxyUseSame=1
+RecorderWinCodePage=1254
+ResetContext=1
+SaveSnapshotResources=1
+ScreenAvailHeight=1040
+ScreenAvailWidth=1920
+ScreenHeight=1080
+ScreenWidth=1920
+SearchForImages=1
+StartRecordingGMT=2021/01/05 12:10:46
+StartRecordingIsDst=0
+SupportCharset=None
+UseBrowserAgent=0
+UseCustomAgent=1
+UseDataFormatExtensions=0
+UserHomePage=
+UTF8InputOutput=0
+WebRecorderVersion=10
